--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "degree_project",
+  "homepage": "https://dardeus.github.io/degree_project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,11 +15,13 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.77.4",
+    "sass": "^1.77.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^7.2.4"
+    "ajv": "^7.2.4",
+    "gh-pages": "^6.1.1"
   }
 }
